[gd_scene load_steps=9 format=3 uid="uid://bfjxfpv5o15qd"]

[ext_resource type="Script" uid="uid://d057ooe0at0hv" path="res://scripts/ui/encounter_dialogue_balloon.gd" id="1_o1cv0"]
[ext_resource type="Script" uid="uid://g32um0mltv5d" path="res://addons/dialogue_manager/dialogue_label.gd" id="2_0w0bl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo4s7"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.956863, 0.956863, 0.956863, 0.984314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhuke"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.14902, 0.168627, 0.266667, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3r2b"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.231373, 0.231373, 0.231373, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.878431, 0.878431, 0.878431, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mt1xk"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.878431, 0.878431, 0.878431, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.878431, 0.878431, 0.878431, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3cc8"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.231373, 0.231373, 0.231373, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="EncounterDialogueBalloon" type="CanvasLayer" groups=["dialogue_balloon"]]
layer = 100
script = ExtResource("1_o1cv0")

[node name="Balloon" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -183.0
offset_right = -19.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_oo4s7")

[node name="SpeakerContainer" type="HBoxContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2

[node name="SpeakerBadge" type="PanelContainer" parent="Balloon/SpeakerContainer"]
unique_name_in_owner = true
self_modulate = Color(0.286275, 0.690196, 1, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hhuke")

[node name="SpeakerName" type="Label" parent="Balloon/SpeakerContainer/SpeakerBadge"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Balloon/SpeakerContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PortraitRect" type="TextureRect" parent="Balloon/SpeakerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="Margin" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Balloon/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CharacterContent" type="VBoxContainer" parent="Balloon/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DialogueLabel" type="RichTextLabel" parent="Balloon/Margin/VBox/CharacterContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "Dialogue Text Goes Here"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
visible_characters_behavior = 1
script = ExtResource("2_0w0bl")
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")

[node name="Responses" type="VBoxContainer" parent="Balloon/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="ResponseTemplate" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 58.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_k3r2b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mt1xk")
theme_override_styles/normal = SubResource("StyleBoxFlat_spyqn")
text = "Response Option"

[node name="ParticipantsList" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = -200.0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ParticipantTemplate" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 68.0
offset_bottom = 33.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u3cc8")

[node name="HBox" type="HBoxContainer" parent="ParticipantTemplate"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PortraitSmall" type="TextureRect" parent="ParticipantTemplate/HBox"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="ParticipantName" type="Label" parent="ParticipantTemplate/HBox"]
layout_mode = 2
text = "Name"
